@@ -27,6 +27,7 @@
     <changelog>
         <![CDATA[
                <b>Changes from 1.2 to 1.3.1</b><br/>
+               [BEAM-1629] PixEx shall output number of pixels<br/>
                [BEAM-1473] PixEx parameters are not correctly loaded from file<br/>
                [BEAM-1472] PixEx parameters are not correctly saved to file<br/>
                [BEAM-1459] Allow aggregating pixel values even if not all pixels of the window are valid<br/>
