@@ -26,12 +26,12 @@ public class MaxAggregatorStrategyTest {
         final DefaultRecord defaultRecord = new DefaultRecord(numbers);
 
         assertEquals(1, maxStrategy.getValueCount());
-        final float[] firstBandValues = maxStrategy.getValues(defaultRecord, 0);
-        final float[] secondBandValues = maxStrategy.getValues(defaultRecord, 1);
+        final Number[] firstBandValues = maxStrategy.getValues(defaultRecord, 0);
+        final Number[] secondBandValues = maxStrategy.getValues(defaultRecord, 1);
 
         assertEquals(1, firstBandValues.length);
         assertEquals(1, secondBandValues.length);
-        assertEquals(6F, firstBandValues[0], 0.0001);
-        assertEquals(7F, secondBandValues[0], 0.0001);
+        assertEquals(6F, firstBandValues[0].doubleValue(), 0.0001);
+        assertEquals(7F, secondBandValues[0].doubleValue(), 0.0001);
     }
 }
