@@ -43,6 +43,7 @@ New BEAM Features
 
 Improvements
 
+[BEAM-1629] PixEx shall output number of pixels
 [BEAM-1605] 'InvalidArgumentException: maxima' error message when trying to open a band
 [BEAM-1616] Geocoding toolview shall display data as table
 [BEAM-1603] Info tool window shall display data as table
